[package]

name = "climate_data"
version = "0.0.0"
authors = [ "Michael Berg-Mohnicke <michael.berg-mohnicke@zalf.de>"  ]
build = "build.rs"

[[bin]]

name = "climate_data"
path = "main.rs"

[build-dependencies]
capnpc = "0.9.5"

[dependencies]
capnp = "0.9.5"
capnp-rpc = "0.9.0"
futures = "0.1"
tokio = "0.1"
chrono = "0.4"

